# neuradix-atlas-team-backend

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: DEPLOYMENT_DIGITALOCEAN.md
migrations/: 0001_init.sql  0002_postings.sql  0003_portal.sql  0004_payments.sql  0005_subledgers.sql  0006_sle_uom.sql  0007_base_stamping.sql  0008_device_last_seen.sql  0009_user_token_expiry.sql  0010_invitation_token_hash.sql
scripts/: backup.sh  restore.sh
src/: api.rs  auth.rs  error.rs  lib.rs  limit.rs  main.rs  model.rs  pay.rs  portal.rs  projection.rs
src/posting/: engine.rs  mod.rs  model.rs  replication.rs  stock.rs  values.rs
src/store/: mem.rs  mod.rs  pg.rs
tests/: abuse.rs  api.rs  fixtures.rs  payments.rs  portal.rs  posting.rs  posting_replication.rs  validation.rs
tests/fixtures/: 0001-mandatory-perpetual-inventory.json  0002-fifo-costing.json  0003-negative-stock-rejection.json  0004-stock-adjustment-up-down.json  0005-payment-settlement-outstanding.json  0006-period-lock.json  0007-role-rejection.json  0008-transfer-value-neutral.json  0009-subledger-rows.json  0010-pos-and-delivery.json  0011-uom-conversion.json  0012-multicurrency-base-stamping.json
tests/support/: mod.rs
