[package]
name = "atlas-team-backend"
version = "0.1.0"
edition = "2021"
description = "Neuradix Atlas Team coordination backend: mutation-log sync, identity, audit, webhook intake (Phase 2 MVP)"
license = "UNLICENSED"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# Constant-time equality for shared-secret comparison (already in the tree
# via rustls/hmac; taking it directly keeps the comparison explicit).
subtle = "2"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
